# kafka-utils

./: README.md  composer.json
attic/base-image/: Dockerfile  build.sh
attic/notifier/: CMakeLists.txt
attic/notifier/cmake/: FindGMock.cmake  FindYamlCpp.cmake
attic/notifier/main/: CMakeLists.txt
attic/notifier/src/: CMakeLists.txt  absconfig.cpp  absconfig.hpp  callback.hpp  curler.cpp  curler.hpp  jsonconfig.cpp  jsonconfig.hpp  kafka.cpp  kafka.hpp  kafkapp.cpp  kafkapp.hpp  utils.hpp
attic/notifier/test/: CMakeLists.txt  mocks.hpp  test-callback.cpp  test-jsonconfig.cpp  test-pipe.cpp
attic/notify/: Dockerfile
attic/notify/app/cmake/: FindPoco.cmake
attic/notify/app/main/: CMakeLists.txt
attic/notify/app/src/: app.cpp  app.hpp
attic/notify/app/src/config/: config.cpp  configfactory.hpp
attic/notify/app/src/utils/: pipe.hpp
attic/notify/app/test/: test-pipe.cpp
base-image/: Dockerfile
notifier/: CMakeLists.txt  Dockerfile.rel  docker-dev.sh  docker-rel.sh
notifier/cmake/: FindJansson.cmake
notifier/fake/: README.md  build.sh  index.php
notifier/main/: main.cpp
notifier/spike/: curl_spike.cpp
notifier/src/: CMakeLists.txt  absconfig.cpp  absconfig.hpp  callback.cpp  callback.hpp  configfactory.cpp  configfactory.hpp  curler.cpp  curler.hpp  jsonconfig.hpp  pipe.cpp  pipe.hpp
notifier/src/config/: configfactory.cpp  jsonconfig.hpp
notifier/src/utils/: pipe.cpp
notifier/test/: CMakeLists.txt  test-jsonconfig.cpp
notify/: Dockerfile  build_docker.sh
notify/app/: CMakeLists.txt
notify/app/main/: CMakeLists.txt  main.cpp
notify/app/src/: CMakeLists.txt  app.cpp  app.hpp
notify/app/src/config/: config.hpp  configfactory.cpp  configfactory.hpp  jsonconfig.cpp  jsonconfig.hpp
notify/app/src/utils/: pipe.cpp  pipe.hpp
notify/app/test/: CMakeLists.txt  test-jsonconfig.cpp  test-pipe.cpp
simple-kafka-webhook/: CMakeLists.txt  Dockerfile.dev  Dockerfile.rel  docker-rel.sh
simple-kafka-webhook/fake/: Dockerfile
simple-kafka-webhook/lib/: CMakeLists.txt  kafka.cpp.bakup  kafka_consume_cb.hpp  kafka_event_cb.hpp
simple-kafka-webhook/lib/config/: json_config.cpp
simple-kafka-webhook/main/: CMakeLists.txt  main.cpp
simple-kafka-webhook/spike/: CMakeLists.txt  curl_spike.cpp
simple-kafka-webhook/src/: CMakeLists.txt  curler.cpp  curler.hpp  curlerc.cpp  curlerc.hpp  kafka.cpp  kafka.hpp  kafka_consume_cb.cpp  kafka_consume_cb.hpp  kafkac.cpp  kafkac.hpp  utils.hpp
simple-kafka-webhook/src/config/: abstract_config.cpp  abstract_config.hpp  config_factory.cpp  config_factory.hpp  json_config.hpp
simple-kafka-webhook/test/: CMakeLists.txt  mockrdkafkacpp.hpp  test-kafka-configure.cpp  test-kafka-event-cb.cpp
simple-kafka-webhook/test/lib/: CMakeLists.txt  test-jsonconfig.cpp  test-kafka-configure.cpp  test-kafka-consume-cb.cpp
simple-kafka-webhook/test/mocks/: MockAbstractConfig.hpp  MockCurler.hpp
simple-kafka-webhook/test/mocks/rdkafkacpp/: MockRdKafkaConf.h  MockRdKafkaEventCb.h  MockRdKafkaKafkaConsumer.h  MockRdKafkaMessage.h  MockRdKafkaProducer.h  MockRdKafkaTopic.h  MockRdKafkaTopicMetadata.h  MockRdKafkaTopicPartition.h
src/: Kafka.php  Zookeeper.php
utils/: CMakeLists.txt  Dockerfile.dev  Dockerfile.rel  docker-dev.sh  docker-rel.sh
utils/cmake/: FindRdkafka.cmake
utils/fake/: index.php
utils/generic-kafka-webhook/: CMakeLists.txt  consume_cb.cpp  consume_cb.hpp  event_cb.cpp  event_cb.hpp  main.cpp
utils/lib/: CMakeLists.txt  hexdump.cpp  hexdump.hpp  kafka.cpp  kafka.hpp  kafka.hpp.bakup  kafka_conf.cpp  kafka_conf.hpp  kafka_consume_cb.cpp  kafka_consume_cb.hpp  kafka_event_cb.cpp  utils.hpp
utils/lib/config/: abstract_config.hpp
utils/test/lib/: CMakeLists.txt  test-hexdump.cpp  test-kafka-conf.cpp  test-kafka-configure.cpp  test-kafka-consume-cb.cpp  test-kafka-event-cb.cpp
utils/test/mocks/rdkafkacpp/: MockRdKafkaBrokerMetadata.h  MockRdKafkaConsumeCb.h  MockRdKafkaConsumer.h  MockRdKafkaEvent.h  MockRdKafkaMetadata.h  MockRdKafkaPartitionMetadata.h  MockRdKafkaTopic.h  RdKafkaCppAll.h
