
CMAKE_MINIMUM_REQUIRED(VERSION 3.9)
SET(CMAKE_MODULE_PATH
        "${PROJECT_SOURCE_DIR}/cmake"
        "${CMAKE_MODULE_PATH}"
)
OPTION(BUILD_TESTS "Build Unit Tests" OFF)

INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/src")
ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(main)
IF(BUILD_TESTS) 
	ADD_SUBDIRECTORY(test)
ENDIF(BUILD_TESTS)

