
CMAKE_MINIMUM_REQUIRED(VERSION 3.9)
PROJECT("generic-kafka-webhook")
SET(CMAKE_MODULE_PATH
        "${PROJECT_SOURCE_DIR}/cmake"
        "${CMAKE_MODULE_PATH}"
)
OPTION(BUILD_TESTS "Build Unit Tests" OFF)

INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/src")
ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(main)
ADD_SUBDIRECTORY(spike)
IF(BUILD_TESTS) 
	SET(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -DBUILD_TESTS" )
	ADD_SUBDIRECTORY(test)
ENDIF(BUILD_TESTS)

