

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(CMAKE_MODULE_PATH
	"${PROJECT_SOURCE_DIR}/cmake"
	"${CMAKE_MODULE_PATH}"
)

FIND_PACKAGE(Poco REQUIRED)
IF(NOT POCO_FOUND)
        MESSAGE(FATAL_ERROR "Poco library not found")
ELSE()
	INCLUDE_DIRECTORIES($POCO_INCLUDE_DIR)
ENDIF()


FIND_PACKAGE(YamlCpp REQUIRED)
IF(NOT YAMLCPP_FOUND)
        MESSAGE(FATAL_ERROR "YAML CPP library not found")
ELSE()
	INCLUDE_DIRECTORIES($YAMLCPP_INCLUDE_DIR)
ENDIF()

ADD_SUBDIRECTORY(src)

