

CMAKE_MINIMUM_REQUIRED(VERSION 3.11)

SET(CMAKE_MODULE_PATH
	"${PROJECT_SOURCE_DIR}/cmake"
	"${CMAKE_MODULE_PATH}"
)

FIND_PACKAGE(Poco REQUIRED)
MESSAGE(STATUS "Poco Include Dir ${POCO_INCLUDE_DIR}")
INCLUDE_DIRECTORIES($POCO_INCLUDE_DIR)

FIND_PACKAGE(YamlCpp REQUIRED)
MESSAGE(STATUS "YamlCpp Include Dir ${YAMLCPP_INCLUDE_DIR}")
INCLUDE_DIRECTORIES($YAMLCPP_INCLUDE_DIR)

FIND_PACKAGE(Jansson REQUIRED)
MESSAGE(STATUS "Jansson Include Dir ${JANSSON_INCLUDE_DIRS}")
INCLUDE_DIRECTORIES($JANSSON_INCLUDE_DIRS)

FIND_PACKAGE(Rdkafka REQUIRED)
MESSAGE(STATUS "RdKafka Include Dir ${RDKAFKA_INCLUDE_DIR}")
INCLUDE_DIRECTORIES($RDKAFKA_INCLUDE_DIR)

INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/src")

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(main)
ADD_SUBDIRECTORY(test)

